--- a/.env.test
+++ b/.env.test
@@ -2,6 +2,6 @@
 NODE_ENV = "test"
 
 # 线上环境接口地址
-VITE_API_URL = "/prod-api"
+VITE_API_URL = "/test-api"
 
 VITE_IMG_URL = 'https://api.yunjinghuchuang.com'
