--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "admin",
+	"name": "template-work",
 	"private": true,
 	"version": "0.0.0",
+	"description": "template-work模板",
 	"scripts": {
 		"dev": "vite",
 		"build:dev": "vue-tsc --noEmit && vite build --mode development",
@@ -11,40 +12,41 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
-		"@types/node": "^18.15.11",
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
+		"@element-plus/icons-vue": "^2.1.0",
 		"@wangeditor/editor": "^5.1.23",
-		"@wangeditor/editor-for-vue": "^1.0.2",
+		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "^1.3.5",
 		"dayjs": "^1.11.7",
 		"element-plus": "^2.3.3",
-		"eslint": "^8.38.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-vue": "^9.11.0",
-		"husky": "^8.0.3",
 		"nprogress": "^0.2.0",
 		"path": "^0.12.7",
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
-		"prettier": "^2.8.7",
 		"qs": "^6.11.1",
 		"rimraf": "^5.0.0",
-		"rollup-plugin-visualizer": "^5.9.0",
 		"sass": "^1.62.0",
-		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-eslint": "^1.8.1",
-		"vite-plugin-html": "^3.2.0",
-		"vite-plugin-svg-icons": "^2.0.1",
 		"vue": "^3.2.47",
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@types/node": "^18.16.1",
 		"@types/nprogress": "^0.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
 		"@vitejs/plugin-vue": "^4.1.0",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-vue": "^9.11.0",
+		"husky": "^8.0.3",
+		"prettier": "^2.8.8",
+		"rollup-plugin-visualizer": "^5.9.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0",
+		"vite-plugin-compression": "^0.5.1",
+		"vite-plugin-eslint": "^1.8.1",
+		"vite-plugin-html": "^3.2.0",
+		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^1.2.0"
 	}
 }
