--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-html": "^3.2.0",
 		"vite-plugin-svg-icons": "^2.0.1",
+		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
 		"vue-tsc": "^1.2.0"
 	}
 }
