--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
 		"rimraf": "^5.0.0",
 		"sass": "^1.62.0",
 		"vue": "^3.2.47",
+		"vue-i18n": "^9.2.2",
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
+		"@intlify/unplugin-vue-i18n": "^0.10.0",
 		"@types/node": "^18.16.1",
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
