--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
-# 线上环境
+# 测试环境
 NODE_ENV = "test"
 
-# 线上环境接口地址
+# 测试环境接口地址
 VITE_API_URL = "/test-api"
 
-VITE_IMG_URL = 'https://api.yunjinghuchuang.com'
+# 测试环境静态资源域名
+VITE_IMG_URL = 'http://192.168.0.102:8085'
