--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
-# 本地环境
+# 开发环境
 NODE_ENV = 'development'
 
-# 本地环境接口地址
+# 开发环境接口地址
 VITE_API_URL = '/api'
 
+# 开发环境静态资源域名
 VITE_IMG_URL = 'http://192.168.0.102:8085'
