--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,5 @@ NODE_ENV = "production"
 # 线上环境接口地址
 VITE_API_URL = "/prod-api"
 
-VITE_IMG_URL = 'https://api.yunjinghuchuang.com'
+# 线上环境静态资源域名
+VITE_IMG_URL = 'http://192.168.0.102:8085'
