--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"@vitejs/plugin-vue": "^4.1.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-vue": "^9.11.0",
 		"husky": "^8.0.3",
+		"postcss": "^8.4.23",
 		"prettier": "^2.8.8",
 		"rollup-plugin-visualizer": "^5.9.0",
+		"tailwindcss": "^3.3.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0",
 		"vite-plugin-compression": "^0.5.1",
