--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"description": "work-template框架",
 	"scripts": {
 		"dev": "vite",
-		"build:dev": "vue-tsc --noEmit && vite build --mode development",
-		"build:test": "vue-tsc --noEmit && vite build --mode test",
-		"build:prod": "vue-tsc --noEmit && vite build --mode production",
+		"build:dev": "vue-tsc --noEmit && rimraf dist && vite build --mode development",
+		"build:test": "vue-tsc --noEmit && rimraf dist && vite build --mode test",
+		"build:prod": "vue-tsc --noEmit && rimraf dist && vite build --mode production",
 		"preview": "vite preview",
 		"prepare": "husky install"
 	},
@@ -23,7 +23,6 @@
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"qs": "^6.11.1",
-		"rimraf": "^5.0.0",
 		"sass": "^1.62.0",
 		"vue": "^3.2.47",
 		"vue-i18n": "^9.2.2",
@@ -44,6 +43,7 @@
 		"husky": "^8.0.3",
 		"postcss": "^8.4.23",
 		"prettier": "^2.8.8",
+		"rimraf": "^5.0.1",
 		"rollup-plugin-visualizer": "^5.9.0",
 		"tailwindcss": "^3.3.2",
 		"typescript": "^4.9.3",
