--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^1.3.5",
 		"dayjs": "^1.11.7",
 		"element-plus": "^2.3.3",
+		"lodash": "^4.17.21",
 		"nprogress": "^0.2.0",
 		"path": "^0.12.7",
 		"pinia": "^2.0.34",
@@ -32,6 +33,7 @@
 		"@commitlint/cli": "17.6.3",
 		"@commitlint/config-conventional": "17.6.3",
 		"@intlify/unplugin-vue-i18n": "^0.10.0",
+		"@types/lodash": "^4.14.195",
 		"@types/node": "^18.16.1",
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
@@ -45,6 +47,7 @@
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
 		"postcss": "^8.4.23",
+		"postcss-preset-env": "^8.5.0",
 		"prettier": "^2.8.8",
 		"rimraf": "^5.0.1",
 		"rollup-plugin-visualizer": "^5.9.0",
