--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
 		"vue-router": "^4.1.6"
 	},
 	"devDependencies": {
-		"@commitlint/cli": "17.6.3",
-		"@commitlint/config-conventional": "17.6.3",
+		"@commitlint/cli": "17.6.5",
+		"@commitlint/config-conventional": "17.6.5",
 		"@intlify/unplugin-vue-i18n": "^0.10.0",
 		"@types/lodash": "^4.14.195",
 		"@types/node": "^18.16.1",
@@ -39,13 +39,12 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"@vitejs/plugin-vue": "^4.1.0",
-		"autoprefixer": "^10.4.14",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-vue": "^9.11.0",
 		"husky": "^8.0.3",
-		"lint-staged": "^13.2.2",
+		"lint-staged": "12.4.2",
 		"postcss": "^8.4.23",
 		"postcss-preset-env": "^8.5.0",
 		"prettier": "^2.8.8",
@@ -60,10 +59,5 @@
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
 		"vue-tsc": "^1.2.0"
-	},
-	"husky": {
-		"hooks": {
-			"commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-		}
 	}
 }
