--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"qs": "^6.11.1",
 		"sass": "^1.62.0",
+		"vite-plugin-cdn-import": "^0.3.5",
 		"vue": "^3.2.47",
 		"vue-i18n": "^9.2.2",
 		"vue-router": "^4.1.6"
