--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"qs": "^6.11.1",
 		"sass": "^1.62.0",
+		"unocss": "^0.58.0",
 		"vite-plugin-cdn-import": "^0.3.5",
 		"vue": "^3.2.47",
 		"vue-i18n": "^9.2.2",
@@ -53,7 +54,6 @@
 		"prettier": "^2.8.8",
 		"rimraf": "^5.0.1",
 		"rollup-plugin-visualizer": "^5.9.0",
-		"tailwindcss": "^3.3.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0",
 		"vite-plugin-compression": "^0.5.1",
