--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "work-template",
 	"private": true,
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"description": "work-template框架",
+	"author": {
+		"name": "Yolo",
+		"email": "g20180630105@gmail.com",
+		"url": "https://github.com/Yolo-00"
+	},
 	"scripts": {
 		"dev": "vite --mode development",
 		"build:dev": "vue-tsc --noEmit && rimraf dist && vite build --mode development",
@@ -62,5 +67,8 @@
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
 		"vue-tsc": "^1.2.0"
+	},
+	"engines": {
+		"node": ">=16.0.0"
 	}
 }
