--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
 	"editor.formatOnSave": true,
 	"stylelint.enable": true,
 	"editor.codeActionsOnSave": {
-		"source.fixAll.stylelint": true,
-		"source.fixAll": true
+		"source.fixAll.stylelint": "explicit",
+		"source.fixAll": "explicit"
 	},
 	"stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass", "html"],
 	"files.eol": "\n",
@@ -129,7 +129,5 @@
 		"zhuti",
 		"zlevel"
 	],
-	"i18n-ally.localesPaths": [
-		"src/language"
-	]
+	"i18n-ally.localesPaths": ["src/language"]
 }
