--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"lodash": "^4.17.21",
 		"nprogress": "^0.2.0",
 		"path": "^0.12.7",
+		"picocolors": "^1.0.0",
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"qs": "^6.11.1",
@@ -65,6 +66,7 @@
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-html": "^3.2.0",
 		"vite-plugin-svg-icons": "^2.0.1",
+		"vite-plugin-vue-devtools": "^7.0.17",
 		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
 		"vue-tsc": "^1.2.0"
 	},
