--- a/package.json
+++ b/package.json
@@ -17,6 +17,26 @@
 		"preview": "vite preview",
 		"prepare": "husky install"
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Yolo-00/work-template.git"
+	},
+	"keywords": [
+		"work-template",
+		"vue",
+		"typescript",
+		"element-plus",
+		"vue-router",
+		"pinia",
+		"unocss",
+		"vite",
+		"vue-i18n"
+	],
+	"homepage": "https://github.com/Yolo-00/work-template",
+	"bugs": {
+		"url": "https://github.com/Yolo-00/work-template/issues"
+	},
+	"license": "MIT",
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.1.0",
 		"@vueuse/core": "^10.3.0",
@@ -66,7 +86,7 @@
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-html": "^3.2.0",
 		"vite-plugin-svg-icons": "^2.0.1",
-		"vite-plugin-vue-devtools": "^7.0.17",
+		"vite-plugin-vue-devtools": "^7.0.15",
 		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
 		"vue-tsc": "^1.2.0"
 	},
