feat: 新增倒计时hook，优化pinia规范

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_APP_TITLE = "work-template"
 VITE_PORT = 1103
 
 # open
-VITE_OPEN = true
+VITE_OPEN = false
 
 # 是否生成包分析文件
 VITE_REPORT = false
