--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
 		"@types/nprogress": "^0.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
-		"@vitejs/plugin-vue": "^4.1.0",
+		"@vitejs/plugin-vue": "5.0.0",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -76,15 +76,14 @@
 		"husky": "^8.0.3",
 		"lint-staged": "12.4.2",
 		"postcss": "^8.4.23",
-		"postcss-preset-env": "^8.5.0",
+		"postcss-preset-env": "9.5.1",
 		"prettier": "^2.8.8",
 		"rimraf": "^5.0.1",
 		"rollup-plugin-visualizer": "^5.9.0",
 		"typescript": "^4.9.3",
-		"vite": "^4.2.0",
+		"vite": "5.0.0",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-eslint": "^1.8.1",
-		"vite-plugin-html": "^3.2.0",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vite-plugin-vue-devtools": "^7.0.15",
 		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
