--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "work-template",
 	"private": true,
 	"version": "1.0.0",
+	"type": "module",
 	"description": "work-template框架",
 	"author": {
 		"name": "Yolo",
@@ -44,11 +45,10 @@
 		"@wangeditor/editor-for-vue": "^5.1.12",
 		"axios": "^1.3.5",
 		"dayjs": "^1.11.7",
-		"element-plus": "^2.3.3",
+		"element-plus": "^2.6.1",
 		"lodash": "^4.17.21",
 		"nprogress": "^0.2.0",
 		"path": "^0.12.7",
-		"picocolors": "^1.0.0",
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
 		"qs": "^6.11.1",
@@ -66,28 +66,28 @@
 		"@types/lodash": "^4.14.195",
 		"@types/node": "^18.16.1",
 		"@types/nprogress": "^0.2.0",
-		"@typescript-eslint/eslint-plugin": "^5.59.1",
-		"@typescript-eslint/parser": "^5.59.1",
-		"@vitejs/plugin-vue": "5.0.0",
-		"eslint": "^8.39.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-vue": "^9.11.0",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-vue": "^5.0.0",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-vue": "^9.23.0",
 		"husky": "^8.0.3",
 		"lint-staged": "12.4.2",
 		"postcss": "^8.4.23",
 		"postcss-preset-env": "9.5.1",
-		"prettier": "^2.8.8",
+		"prettier": "^3.2.5",
 		"rimraf": "^5.0.1",
 		"rollup-plugin-visualizer": "^5.9.0",
 		"typescript": "^4.9.3",
-		"vite": "5.0.0",
+		"unplugin-vue-setup-extend-plus": "^1.0.1",
+		"vite": "^5.1.6",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vite-plugin-vue-devtools": "^7.0.15",
-		"vite-plugin-vue-setup-extend-plus": "^0.1.0",
-		"vue-tsc": "^1.2.0"
+		"vue-tsc": "^2.0.0"
 	},
 	"engines": {
 		"node": ">=16.0.0"
