--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "work-template",
 	"private": true,
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"type": "module",
 	"description": "work-template框架",
 	"author": {
@@ -63,6 +63,7 @@
 		"@commitlint/cli": "17.6.5",
 		"@commitlint/config-conventional": "17.6.5",
 		"@intlify/unplugin-vue-i18n": "^0.10.0",
+		"@types/gradient-string": "^1.1.5",
 		"@types/lodash": "^4.14.195",
 		"@types/node": "^18.16.1",
 		"@types/nprogress": "^0.2.0",
@@ -73,6 +74,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-vue": "^9.23.0",
+		"gradient-string": "^2.0.2",
 		"husky": "^8.0.3",
 		"lint-staged": "12.4.2",
 		"postcss": "^8.4.23",
