--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,3 @@
 {
-	"recommendations": [
-		"Vue.volar",
-		"Vue.vscode-typescript-vue-plugin",
-		"bradlc.vscode-tailwindcss",
-		"Vue.vscode-typescript-vue-plugin"
-	]
+	"recommendations": ["Vue.volar", "bradlc.vscode-tailwindcss"]
 }
