--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["Vue.volar", "bradlc.vscode-tailwindcss"]
+	"recommendations": ["Vue.volar", "bradlc.vscode-tailwindcss", "lokalise.i18n-ally"]
 }
