--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
 		"unocss": "^0.58.0",
 		"vue": "^3.4.21",
 		"vue-i18n": "^9.2.2",
-		"vue-router": "^4.1.6"
+		"vue-router": "^4.1.6",
+		"vue3-puzzle-vcode": "^1.1.7"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "17.6.5",
