--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"dayjs": "^1.11.7",
 		"element-plus": "^2.6.1",
 		"lodash": "^4.17.21",
+		"lottie-web": "^5.12.2",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
