--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"unocss": "^0.58.0",
 		"vue": "^3.4.21",
 		"vue-i18n": "^9.2.2",
+		"vue-pdf-embed": "^2.0.3",
 		"vue-router": "^4.1.6",
 		"vue3-puzzle-vcode": "^1.1.7"
 	},
