--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.1.0",
+		"@types/qrcode": "^1.5.5",
 		"@vueuse/core": "^10.3.0",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
@@ -51,6 +52,7 @@
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.34",
 		"pinia-plugin-persistedstate": "^3.1.0",
+		"qrcode": "^1.5.3",
 		"qs": "^6.11.1",
 		"unocss": "^0.58.0",
 		"vue": "^3.4.21",
