--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev": "vite --mode development",
 		"build:dev": "vue-tsc --noEmit && rimraf dist && vite build --mode development",
 		"build:test": "vue-tsc --noEmit && rimraf dist && vite build --mode test",
-		"build:prod": "vue-tsc --noEmit && rimraf dist && vite build --mode production",
+		"build:prod": "vue-tsc --noEmit && rimraf dist && vite build --mode production && generate-version-file",
 		"lint:lint-staged": "lint-staged",
 		"preview": "vite preview",
 		"prepare": "husky install"
@@ -56,6 +56,7 @@
 		"qrcode": "^1.5.3",
 		"qs": "^6.12.1",
 		"unocss": "^0.59.4",
+		"version-rocket": "^1.7.1",
 		"vue": "^3.4.23",
 		"vue-i18n": "^9.13.0",
 		"vue-pdf-embed": "^2.0.2",
