--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,10 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - master # 或你希望触发构建的分支
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
@@ -16,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "21" # 使用 Node.js 21
+          node-version: "21"
 
       - name: Install dependencies
         run: npm install
@@ -28,4 +31,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist # 你的构建输出目录
+          publish_dir: ./dist
