--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # 测试环境接口地址
-VITE_API_URL = "/test-api"
+VITE_API_URL = "http://117.72.43.202:8099"
 
 # 测试环境静态资源域名
 VITE_IMG_URL = 'http://192.168.0.102:8085'
