--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build:dev
+        run: npm run build:test
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
