feat: 新增瀑布流布局和animate.css

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "work-template",
 	"private": true,
-	"version": "1.5.0",
+	"version": "1.6.0",
 	"type": "module",
 	"description": "work-template框架",
 	"author": {
@@ -45,12 +45,14 @@
 		"@vueuse/core": "^10.9.0",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
+		"animate.css": "^4.1.1",
 		"axios": "^1.6.8",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
 		"element-plus": "^2.7.0",
 		"lodash": "^4.17.21",
 		"lottie-web": "^5.12.2",
+		"masonry-layout": "^4.2.2",
 		"md-editor-v3": "^4.19.1",
 		"monaco-editor": "^0.50.0",
 		"nprogress": "^0.2.0",
@@ -72,6 +74,7 @@
 		"@intlify/unplugin-vue-i18n": "^4.0.0",
 		"@types/gradient-string": "^1.1.6",
 		"@types/lodash": "^4.17.0",
+		"@types/masonry-layout": "^4.2.8",
 		"@types/node": "^20.12.7",
 		"@types/nprogress": "^0.2.3",
 		"@types/qrcode": "^1.5.5",
@@ -102,6 +105,6 @@
 		"vue-tsc": "^2.0.13"
 	},
 	"engines": {
-		"node": ">=16.0.0"
+		"node": ">=18.0.0"
 	}
 }
