--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"pinia-plugin-persistedstate": "^3.2.1",
 		"qrcode": "^1.5.3",
 		"qs": "^6.12.1",
+		"splitpanes": "^3.1.5",
 		"unocss": "^0.59.4",
 		"version-rocket": "^1.7.1",
 		"vue": "^3.4.23",
@@ -78,6 +79,7 @@
 		"@types/node": "^20.12.7",
 		"@types/nprogress": "^0.2.3",
 		"@types/qrcode": "^1.5.5",
+		"@types/splitpanes": "^2.2.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-vue": "^5.0.4",
