--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
 		"vue-i18n": "^9.13.0",
 		"vue-pdf-embed": "^2.0.2",
 		"vue-router": "^4.3.2",
-		"vue3-puzzle-vcode": "^1.1.7"
+		"vue3-puzzle-vcode": "^1.1.7",
+		"vuedraggable": "^4.1.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.2.2",
