--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"axios": "^1.6.8",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
-		"element-plus": "^2.7.0",
+		"element-plus": "^2.8.0",
 		"lodash": "^4.17.21",
 		"lottie-web": "^5.12.2",
 		"masonry-layout": "^4.2.2",
@@ -65,6 +65,7 @@
 		"unocss": "^0.59.4",
 		"version-rocket": "^1.7.1",
 		"vue": "^3.4.23",
+		"vue-demi": "^0.14.6",
 		"vue-i18n": "^9.13.0",
 		"vue-json-pretty": "^2.4.0",
 		"vue-pdf-embed": "^2.0.2",
@@ -102,7 +103,7 @@
 		"sass": "^1.75.0",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.9",
-		"vite-plugin-cdn-import": "^0.3.5",
+		"vite-plugin-cdn-import": "^1.0.1",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-svg-icons": "^2.0.1",
