--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev": "vite --mode development",
 		"build:dev": "vue-tsc --noEmit && rimraf dist && vite build --mode development",
 		"build:test": "vue-tsc --noEmit && rimraf dist && vite build --mode test",
-		"build:prod": "vue-tsc --noEmit && rimraf dist && vite build --mode production && generate-version-file",
+		"build:prod": "vue-tsc --noEmit && rimraf dist && vite build --mode production",
 		"lint:lint-staged": "lint-staged",
 		"preview": "vite preview",
 		"prepare": "husky install"
@@ -41,37 +41,24 @@
 	"license": "MIT",
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
-		"@vue-office/docx": "^1.6.0",
-		"@vue-office/excel": "^1.7.6",
 		"@vueuse/core": "^10.9.0",
 		"@wangeditor/editor": "^5.1.23",
 		"@wangeditor/editor-for-vue": "^5.1.12",
-		"animate.css": "^4.1.1",
 		"axios": "^1.6.8",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
 		"element-plus": "^2.8.0",
 		"lodash": "^4.17.21",
-		"lottie-web": "^5.12.2",
-		"masonry-layout": "^4.2.2",
-		"md-editor-v3": "^4.19.1",
-		"monaco-editor": "^0.50.0",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
 		"qrcode": "^1.5.3",
 		"qs": "^6.12.1",
-		"splitpanes": "^3.1.5",
 		"unocss": "^0.59.4",
-		"version-rocket": "^1.7.1",
 		"vue": "^3.4.23",
-		"vue-demi": "^0.14.6",
 		"vue-i18n": "^9.13.0",
-		"vue-json-pretty": "^2.4.0",
-		"vue-pdf-embed": "^2.0.2",
 		"vue-router": "^4.3.2",
-		"vue3-puzzle-vcode": "^1.1.7",
-		"vuedraggable": "^4.1.0"
+		"vue3-puzzle-vcode": "^1.1.7"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "19.2.2",
@@ -79,11 +66,9 @@
 		"@intlify/unplugin-vue-i18n": "^4.0.0",
 		"@types/gradient-string": "^1.1.6",
 		"@types/lodash": "^4.17.0",
-		"@types/masonry-layout": "^4.2.8",
 		"@types/node": "^20.12.7",
 		"@types/nprogress": "^0.2.3",
 		"@types/qrcode": "^1.5.5",
-		"@types/splitpanes": "^2.2.6",
 		"@typescript-eslint/eslint-plugin": "^7.2.0",
 		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-vue": "^5.0.4",
@@ -100,8 +85,8 @@
 		"prettier": "^3.2.5",
 		"rimraf": "^5.0.5",
 		"rollup-plugin-visualizer": "^5.12.0",
-		"sass": "^1.75.0",
-		"typescript": "^5.4.5",
+		"sass": "1.75.0",
+		"typescript": "5.4.5",
 		"vite": "^5.2.9",
 		"vite-plugin-cdn-import": "^1.0.1",
 		"vite-plugin-compression": "^0.5.1",
