--- a/package.json
+++ b/package.json
@@ -66,12 +66,12 @@
 		"version-rocket": "^1.7.1",
 		"vue": "^3.4.23",
 		"vue-demi": "^0.14.6",
+		"vue-draggable-plus": "^0.6.0",
 		"vue-i18n": "^9.13.0",
 		"vue-json-pretty": "^2.4.0",
 		"vue-pdf-embed": "^2.0.2",
 		"vue-router": "^4.3.2",
 		"vue3-puzzle-vcode": "^1.1.7",
-		"vuedraggable": "^4.1.0",
 		"vxe-table": "^4.11.11"
 	},
 	"devDependencies": {
