feat: 增加数据大屏

--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
 		"@wangeditor/editor-for-vue": "^5.1.12",
 		"animate.css": "^4.1.1",
 		"axios": "^1.6.8",
+		"cesium": "^1.127.0",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
 		"element-plus": "^2.8.0",
+		"heatmap.js": "^2.0.5",
 		"lodash": "^4.17.21",
 		"lottie-web": "^5.12.2",
 		"masonry-layout": "^4.2.2",
@@ -79,6 +81,7 @@
 		"@commitlint/config-conventional": "19.2.2",
 		"@intlify/unplugin-vue-i18n": "^4.0.0",
 		"@types/gradient-string": "^1.1.6",
+		"@types/heatmap.js": "^2.0.41",
 		"@types/lodash": "^4.17.0",
 		"@types/masonry-layout": "^4.2.8",
 		"@types/node": "^20.12.7",
@@ -105,6 +108,7 @@
 		"typescript": "^5.4.5",
 		"vite": "^5.2.9",
 		"vite-plugin-cdn-import": "^1.0.1",
+		"vite-plugin-cesium": "^1.2.23",
 		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-svg-icons": "^2.0.1",
