--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@element-plus/icons-vue": "^2.3.1",
+		"@emoji-mart/data": "^1.2.1",
 		"@vue-office/docx": "^1.6.0",
 		"@vue-office/excel": "^1.7.6",
 		"@vueuse/core": "^10.9.0",
@@ -52,6 +53,7 @@
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
 		"element-plus": "^2.8.0",
+		"emoji-mart": "^5.6.0",
 		"heatmap.js": "^2.0.5",
 		"lodash": "^4.17.21",
 		"lottie-web": "^5.12.2",
